# alpha-pilot

./: .env.dev-server.example  .env.example  .env.local.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  example.env
backend/: .dockerignore  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260316_0001_init_schema.py  20260317_0002_add_system_settings.py  20260317_0003_add_users.py  20260317_0004_add_admin_tables.py  20260421_0001_multi_tenant_accounts.py  20260421_0002_factor_schema.py  20260421_0003_decision_audit_schema.py  20260421_0003a_add_agent_invocations_template_idx.py  20260421_0004_insight_schema.py  20260421_0004a_add_insight_fk_indexes.py  20260427_122726_a839feb6fbbc_init_schema.py  20260501_112727_602c525cfbcd_init_schema_after_v37_refactor.py  aa150ff7dee5_extend_ai_decisions.py  b338184343a4_event_bus_tables.py  bbe8a491f942_add_event_outbox_event_id_index.py  d9076875486b_shadow_ops_schema.py
backend/scripts/: create_tables.py  init_db.py  start.sh  start_api.py  start_scheduler.py  upgrade_db.py
backend/src/: app.py  main.py
backend/src/api/: dependencies.py  router.py  websocket.py
backend/src/app/: __init__.py  app.py  dependencies.py  main.py  router.py  websocket.py
backend/src/common/: api_response.py  constants.py  events.py
backend/src/configs/: __init__.py  app_configs.py
backend/src/control/: __init__.py
backend/src/controllers/: dependencies.py  rate_limit.py  router.py  websocket.py
backend/src/cruds/: __init__.py  (+27 more)
backend/tests/: conftest.py
(+610 files in other folders)
